# treeshake

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  build.py  build.sh  pyproject.toml  requirements.txt  setup.py
tests/: test_shaker.py
tests/_data/css/: second.css  stylesheet.css
tests/_data/html/: index.html
treeshake/: __init__.py  __main__.py  shake.pyx  shaker.c  shaker.pyx  stylesheet.c  stylesheet.pyx  test.py
